--- a/app/src/main/res/drawable/nav_background.xml
+++ b/app/src/main/res/drawable/nav_background.xml
@@ -3,7 +3,10 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/nav_bg"/>
+            <gradient
+                android:angle="90"
+                android:startColor="@color/nav_bg"
+                android:endColor="@color/nav_bg_end"/>
             <corners android:topRightRadius="15dp"
                 android:topLeftRadius="15dp"/>
         </shape>
