--- a/app/src/main/res/drawable/transparent_bg.xml
+++ b/app/src/main/res/drawable/transparent_bg.xml
@@ -3,8 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/transparent_bg"/>
-            <corners android:topRightRadius="15dp"
-                android:bottomLeftRadius="15dp"/>
+            <corners android:radius="15dp"/>
             <stroke android:color="@color/tr_bg_str"
                 android:width="1.5dp"/>
 
