--- a/app/src/main/res/drawable/buttons.xml
+++ b/app/src/main/res/drawable/buttons.xml
@@ -7,8 +7,7 @@
                 android:centerColor="@color/button_clr"
                 android:endColor="@color/button_clr_st"
                 />
-            <corners android:topRightRadius="15dp"
-                android:bottomLeftRadius="15dp"/>
+            <corners android:radius="10dp"/>
             <stroke android:color="@color/button_str"
                 android:width="1.5dp"/>
         </shape>
