--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,8 @@
     <color name="bgcolorcn">#116F95</color>
     <color name="bgcolornd">#001040</color>
 
-    <color name="listvbg">#CC031027</color>
+    <color name="seekbar_clr">#CC2F7AFF</color>
+    <color name="seekbar_sec_clr">#CC031027</color>
+
 
 </resources>
