--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -109,6 +109,57 @@
                     android:background="@color/ltgray"
                     />
             </RelativeLayout>
+            <RelativeLayout
+                android:visibility="gone"
+                android:id="@+id/helpbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="30dp"
+                >
+                <TextView
+                    android:id="@+id/telegramBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:background="@drawable/buttons"
+                    android:padding="15dp"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:text="Telegram"
+                    />
+
+                <TextView
+                    android:id="@+id/whatsappBtn"
+                    android:layout_toEndOf="@id/telegramBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:background="@drawable/buttons"
+                    android:padding="15dp"
+                    android:layout_marginStart="10dp"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:text="Whatsapp"
+                    />
+                <TextView
+                    android:id="@+id/messengerBtn"
+                    android:layout_below="@id/telegramBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:background="@drawable/buttons"
+                    android:padding="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_centerHorizontal="true"
+
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:text="Messenger"
+                    />
+
+            </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
 
