--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -26,8 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:layout_marginTop="20dp"
-                android:background="@color/textbg">
+                android:layout_marginTop="20dp">
                 <View
                     android:id="@+id/border1"
                     android:layout_width="match_parent"
@@ -40,6 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
+                    android:background="@drawable/more_bg"
                     android:padding="15dp"
                     android:textColor="@color/white"
                     android:textSize="20sp"
@@ -59,6 +59,7 @@
                     android:layout_below="@id/border2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/more_bg"
 
                     android:padding="15dp"
                     android:textColor="@color/white"
@@ -77,6 +78,7 @@
                     android:layout_below="@id/border3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/more_bg"
 
                     android:padding="15dp"
                     android:textColor="@color/white"
@@ -95,6 +97,7 @@
                     android:layout_below="@id/border4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/more_bg"
 
                     android:padding="15dp"
                     android:textColor="@color/white"
