--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="transparent_bg">#804E649E</color>
     <color name="textbg">#80031027</color>
     <color name="tr_bg_str">#990A1A37</color>
+    <color name="tp_txt">#997B94DA</color>
 
     <color name="nav_bg">#122D50</color>
     <color name="nav_bg_end">#005087</color>
@@ -36,6 +37,9 @@
     <color name="seekbar_sec_clr">#CC031027</color>
 
     <color name="drawcolor">#41A1FF</color>
+
+    <color name="morebg">#80031027</color>
+    <color name="morebg_chk">#800E254E</color>
 
 
 
