--- a/app/src/main/res/drawable/buttons.xml
+++ b/app/src/main/res/drawable/buttons.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <gradient android:angle="135"
+                android:startColor="@color/button_clr_st_chk"
+                android:centerColor="@color/button_clr_chk"
+                android:endColor="@color/button_clr_st_chk"
+                />
+            <corners android:radius="10dp"/>
+            <stroke android:color="@color/button_str_chk"
+                android:width="1.5dp"/>
+        </shape>
+    </item>
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <gradient android:angle="135"
@@ -9,19 +22,6 @@
                 />
             <corners android:radius="10dp"/>
             <stroke android:color="@color/button_str"
-                android:width="1.5dp"/>
-        </shape>
-    </item>
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <gradient android:angle="135"
-                android:startColor="@color/button_clr_st_chk"
-                android:centerColor="@color/button_clr_chk"
-                android:endColor="@color/button_clr_st_chk"
-                />
-            <corners android:topRightRadius="15dp"
-                android:bottomLeftRadius="15dp"/>
-            <stroke android:color="@color/button_str_chk"
                 android:width="1.5dp"/>
         </shape>
     </item>
