--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:layout_marginTop="20dp">
+                android:layout_centerInParent="true">
                 <View
                     android:id="@+id/border1"
                     android:layout_width="match_parent"
